Reset build file changes