@@ -39,7 +39,7 @@ dependencies {
     compile(project(":ui:preloader"))
     //ideProvider project(path= ":core", configuration= "compile")
 
-    compile(group = "org.controlsfx", name = "controlsfx", version = "11.0.2")
+    compile(group = "org.controlsfx", name = "controlsfx", version = "11.0.0-RC2")
     compile(group = "com.hierynomus", name = "sshj", version = "0.16.0")
     compile(group = "org.apache.velocity", name = "velocity", version = "1.7")
 
@@ -69,15 +69,14 @@ tasks.named<JavaCompile>("compileTestJava") {
 if (project.hasProperty("headless")) {
     println("Running UI tests headless (if supported by current JDK)")
     tasks.withType<Test> {
-        jvmArgs(listOf(
+        jvmArgs = listOf(
                 "-Djava.awt.headless=true",
                 "-Dtestfx.robot=glass",
                 "-Dtestfx.headless=true",
                 "-Dprism.order=sw",
                 "-Dprism.text=t2k",
-                "-Dheadless.geometry=1600x1200-32",
-                "--add-exports", "javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED"
-        ))
+                "-Dheadless.geometry=1600x1200-32"
+        )
     }
 }
 
@@ -178,7 +177,7 @@ if (project.hasProperty("generation") || project.hasProperty("genonly")) {
     tasks.withType<Test> {
         dependsOn(installOpenCV)
         val defaultLibPath = System.getProperty("java.library.path");
-        jvmArgs(listOf("-Djava.library.path=$defaultLibPath${System.getProperty("path.separator")}$jniPath"))
+        jvmArgs = listOf("-Djava.library.path=$defaultLibPath${System.getProperty("path.separator")}$jniPath")
         if (project.hasProperty("genonly")) {
             useJUnit {
                 includeCategories = setOf("edu.wpi.grip.ui.codegeneration.GenerationTesting")
@@ -298,9 +297,6 @@ tasks.register<JpackageExec>("jpackage") {
 
 application {
     mainClassName = "edu.wpi.grip.ui.Launch"
-    applicationDefaultJvmArgs = listOf(
-        "--add-exports", "javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED"
-    )
 }
 
 /**
